# P4NTENG.github.io

./: .gitignore  AGENTS.md  Gemfile  README.md  _config.yml  index.html  markdown-hint.md
_drafts/: kdt-프로그래밍기초-1-git-ai코딩-환경구성-2607-02.md
_includes/: footer.html  head.html
_layouts/: default.html
_posts/: 2020-04-03-introducing-lanyon.md  2026-07-15-context-engineering.md  2026-07-15-prompt-engineering.md  2026-07-16-data-day1.md  2026-07-16-data-day2.md  2026-07-21-llm-architecture.md  2026-07-22-modern-LLM.md
public/css/: footer.css
tools/pdf_to_post/: README.md  config.yml  pyproject.toml
tools/pdf_to_post/src/pdf_to_post/: __init__.py  __main__.py  benchmark.py  cli.py  config.py  extract.py  hybrid.py  hybrid_extract.py  normalize.py  openvino_backend.py  pipeline.py  quality.py  render.py  validate.py
tools/pdf_to_post/tests/: test_core.py  test_extract.py  test_hybrid.py  test_openvino_backend.py
